syntax = "proto3";

package article_category.v1;

option go_package = "sabitou/proto/article_category/v1;articleCategoryV1";

service ArticleCategoryService {
  rpc CreateArticleCategory(CreateArticleCategoryRequest) returns (CreateArticleCategoryResponse);
  rpc GetArticleCategory(GetArticleCategoryRequest) returns (GetArticleCategoryResponse);
  rpc UpdateArticleCategory(UpdateArticleCategoryRequest) returns (UpdateArticleCategoryResponse);
  rpc DeleteArticleCategory(DeleteArticleCategoryRequest) returns (DeleteArticleCategoryResponse);
}

message ArticleCategory {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateArticleCategoryRequest {
  ArticleCategory article_category = 1;
}

message CreateArticleCategoryResponse {
  string id = 1;
}

message GetArticleCategoryRequest {
  string id = 1;
}

message GetArticleCategoryResponse {
  ArticleCategory article_category = 1;
}

message UpdateArticleCategoryRequest {
  ArticleCategory article_category = 1;
}

message UpdateArticleCategoryResponse {
  ArticleCategory article_category = 1;
}

message DeleteArticleCategoryRequest {
  string id = 1;
}

message DeleteArticleCategoryResponse {
  bool success = 1;
}
