syntax = "proto3";

package payment;

option go_package = "sabitou/proto/payment;payment";

service PaymentService {
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
}

message Payment {
  string id = 1;
  string method = 2; // cash, OM, MOMO, credit card
  double amount_paid_in_xaf = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreatePaymentRequest {
  string method = 1;
  double amount_paid_in_xaf = 2;
}

message CreatePaymentResponse {
  string id = 1;
}

message GetPaymentRequest {
  string id = 1;
}

message GetPaymentResponse {
  Payment payment = 1;
}
